# PureCraft

./: CMakeLists.txt  LICENSE
include/: FastNoiseSIMD.h  FastNoiseSIMD_internal.h  MCGL.hpp  Models.hpp  block.hpp  blocks.hpp  chunk.hpp  defaultCrosshair.hpp  perlin.hpp  raycast.hpp  update.hpp
include/ElementHierarchy/: chunk.hpp  gen.hpp  universe.hpp  world.hpp
src/: FastNoiseSIMD.cpp  FastNoiseSIMD_internal.cpp  main.cpp
